--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
   "dependencies": {
     "body-parser": "^1.13.3",
     "express": "^4.13.3"
+  },
+  "scripts": {
+   "start": "node index.js"
   }
+
 }
